--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,41 +1,19 @@
 body {
   background-color: #282c34;
-}
-.App {
+  color: white;
   text-align: center;
 }
-
-.App-logo {
-  height: 30vh;
-  pointer-events: none;
+header {
+  background-color: rgb(25, 118, 210);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 20vh;
+.about {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.aboutText {
+  margin: 2em 0 0 2em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.aboutPic {
+  margin: 2em 2em 0 2em;
+  height: 10em;
+  width: 10em;
 }
