--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,19 +6,6 @@ body {
 header {
   background-color: rgb(25, 118, 210);
 }
-.about {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.aboutText {
-  margin: 2em 0 0 2em;
-  width: 50%;
-  font-size: 1.25em;
-  
-}
-.aboutPic {
-  margin: 2em 2em 0 2em;
-  height: 15em;
-  width: 15em;
+.nameLogo{
+  cursor: pointer;
 }
