added effect to name logo

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,4 +8,13 @@ header {
 }
 .nameLogo{
   cursor: pointer;
+  position: relative;
+  right: 5em;
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	text-transform: uppercase;
+	line-height: .75;
 }
