moved mobile header items to display properly hopefully

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,8 +18,11 @@ header {
 	line-height: .75;
 }
 .mobileNameLogo{
+	position: relative;
+	right: 5em;
   background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
 	background-size: cover;
+	justify-content: center;
 	color: transparent;
 	-moz-background-clip: text;
 	-webkit-background-clip: text;
@@ -30,3 +33,8 @@ header {
   position: relative;
   right: 15em;
 }
+@media only screen and (max-width: 600px) {
+	.MuiToolbar-regular{
+		right: unset;
+	}
+  }
