--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,7 +17,7 @@ header {
 	text-transform: uppercase;
 	line-height: .75;
 }
-.mobileNameLogo{
+/* .mobileNameLogo{
   background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
 	background-size: cover;
 	justify-content: center;
@@ -25,7 +25,7 @@ header {
 	-moz-background-clip: text;
 	-webkit-background-clip: text;
 	text-transform: uppercase;
-}
+} */
 @media only screen and (max-width: 600px) {
 	.MuiToolbar-regular{
 		right: unset;
