--- a/src/css/home.css
+++ b/src/css/home.css
@@ -16,8 +16,10 @@
 }
 
 .greeting h1 {
-	background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+	background:url(https://66.media.tumblr.com/4562d983bb013868bff9eb54a997ed87/tumblr_oe7fca9J7p1vqfnzao1_400.gif);
+	filter: hue-rotate(-80deg);
 	background-size: cover;
+	background-position: left top;
 	color: transparent;
 	-moz-background-clip: text;
 	-webkit-background-clip: text;
@@ -25,6 +27,7 @@
 	font-size: 120px;
 	line-height: .75;
 	margin: 10px 0;
+	animation: infinite .1s;
 }
 .greeting img{
     margin-top: 1em;
