added all projects to the projects page

--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -3,3 +3,9 @@
     justify-content: center;
     margin-top: 5em;
 }
+@media only screen and (max-width: 600px) {
+    iframe {
+        width: auto;
+        height: 30em;
+    }
+  }
