mobile bg changes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -33,22 +33,22 @@ header {
 	position: relative;
 	left: 4em;
 }
-/* @keyframes move-twink-back {
+ @keyframes move-twink-back {
     from {background-position:0 0;}
     to {background-position:-10000px 0;}
-} */
-/* @-webkit-keyframes move-twink-back {
+} 
+ @-webkit-keyframes move-twink-back {
     from {background-position:0 0;}
     to {background-position:-10000px 5000px;}
-} */
-/* @-moz-keyframes move-twink-back {
+} 
+ @-moz-keyframes move-twink-back {
     from {background-position:0 0;}
     to {background-position:-10000px 5000px;}
 }
 @-ms-keyframes move-twink-back {
     from {background-position:0 0;}
     to {background-position:-10000px 5000px;}
-} */
+} 
 
 @keyframes move-clouds-back {
     from {background-position:0 0;}
